@@ -32,6 +32,14 @@ Extensions
 Other Changes
 =============
 
+* By default, pylint does no longer take files starting with ``.#`` into account. Those are
+  considered `emacs file locks`_. This behavior can be reverted by redefining the
+  ``ignore-patterns`` option.
+
+  Closes #367
+
+.. _`emacs file locks`: https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html
+
 * Fixed extremely long processing of long lines with comma's.
 
   Closes #5483
