@@ -5,17 +5,26 @@
 import copy
 import json
 import logging
+import re
 import unittest
 from pathlib import Path
 from typing import Any, Dict, List, Tuple, Union
 from unittest.mock import Mock
 
+from pylint.constants import PY38_PLUS
 from pylint.lint import Run
 
 # We use Any in this typing because the configuration contains real objects and constants
 # that could be a lot of things.
 ConfigurationValue = Any
 PylintConfiguration = Dict[str, ConfigurationValue]
+
+
+if not PY38_PLUS:
+    # We need to deepcopy a compiled regex pattern
+    # In python 3.6 and 3.7 this require a hack
+    # See https://stackoverflow.com/a/56935186
+    copy._deepcopy_dispatch[type(re.compile(""))] = lambda r, _: r  # type: ignore[attr-defined]
 
 
 def get_expected_or_default(
@@ -31,7 +40,7 @@ def get_expected_or_default(
         with open(expected_result_path, encoding="utf8") as f:
             expected = f.read()
         # logging is helpful to realize your file is not taken into
-        # account after a misspell of the file name. The output of the
+        # account after a misspelling of the file name. The output of the
         # program is checked during the test so printing messes with the result.
         logging.info("%s exists.", expected_result_path)
     else:
@@ -139,7 +148,7 @@ def run_using_a_configuration_file(
     # would not be accessible outside the `with` block.
     with unittest.mock.patch("sys.exit") as mocked_exit:
         # Do not actually run checks, that could be slow. We don't mock
-        # `Pylinter.check`: it calls `Pylinter.initialize` which is
+        # `PyLinter.check`: it calls `PyLinter.initialize` which is
         # needed to properly set up messages inclusion/exclusion
         # in `_msg_states`, used by `is_message_enabled`.
         check = "pylint.lint.pylinter.check_parallel"
