@@ -1,0 +1,4 @@
+# The name is invalid, but we should not analyse this file
+# Because its filename reseambles an emacs file lock ignored by default
+# https://www.gnu.org/software/emacs/manual/html_node/elisp/File-Locks.html
+# See https://github.com/PyCQA/pylint/issues/367
