@@ -1,0 +1,3 @@
+# The name is invalid, but we should not analyse this file
+# Because it resembles an emacs file lock and is ignored by the configuration
+# See https://github.com/PyCQA/pylint/issues/367
