@@ -1,0 +1,3 @@
+# [invalid-name]
+# The name is invalid and we should analyse this file
+# as ignore-patterns is redefined in the configuration
